src/objects/ddrive__Sync_Business_Objects__c.object
<CustomObject>
    <fields>
        <fullName>ddrive__Configuration__c</fullName>
        <label>DD Instance</label>
        <referenceTo>ddrive__Configuration__c</referenceTo>
        <relationshipLabel>Sync Business Object</relationshipLabel>
        <relationshipName>Sync_Business_Object</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ddrive__Final_Object_Name__c</fullName>
        <label>Final Object Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Final_Record_Type__c</fullName>
        <label>Final Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Intermediate_Object_Name__c</fullName>
        <label>Intermediate Object Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Is_Running__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Job_ID__c</fullName>
        <label>Job ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Sync Business Object</label>
    <listViews>
        <fullName>ddrive__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sync Business Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sync Business Object</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>